package raytracer;

import "proto/util/color_data.proto";
import "proto/util/point_data.proto";
import "proto/util/vector_data.proto";

message DepthOfFieldData {
  // The distance from the camera at which the scene is in focus.
  optional double focal_depth = 1 [default = -1];

  // The size of the camera lens.
  optional double lens_size = 2 [default = 0];

  // If this is set, an additional visualization sphere is added to the scene.
  optional ColorData visualization_color = 3;
}

message CameraData {
  optional PointData position = 1;
  optional VectorData view = 2;
  optional VectorData up = 3;

  // Angle between the top and the bottom of the image.
  optional double opening_angle = 4;

  optional uint64 resolution_x = 5;
  optional uint64 resolution_y = 6;

  optional DepthOfFieldData depth_of_field = 7;
}